--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.1.0",
-    "@clerk/clerk-react": "^4.20.0",
+    "@clerk/clerk-react": "^4.16.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
@@ -37,6 +37,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-intl": "^6.4.2",
