--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-date-pickers": "^6.5.0",
     "@sendgrid/mail": "^7.7.0",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
     "@tremor/react": "^2.4.1",
     "auth0-js": "^9.20.2",
     "axios": "^1.4.0",
