--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
+    "stripe": "^12.9.0",
     "uuid": "^9.0.0",
     "validator": "^13.9.0"
   }
