--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-intl": "^6.4.2",
     "react-redux": "^8.0.5",
