--- a/client/package.json
+++ b/client/package.json
@@ -51,7 +51,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.10",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "auth0-js": "^9.20.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
