--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "build": "node ./index.js",
+    "build": "npm install",
+    "start": "node build/index.js",
     "dev": "nodemon ./index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
