--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm install",
-    "start": "node build/index.js",
+    "start": "node index.js",
     "dev": "nodemon ./index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
