--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tremor/react": "^2.4.1",
+    "auth0-js": "^9.20.2",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "cloudinary-react": "^1.8.1",
@@ -37,6 +38,7 @@
     "moment": "^2.29.4",
     "nodemailer": "^6.9.2",
     "nodemailer-browser": "^0.1.0",
+    "papaparse": "^5.4.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -51,8 +53,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.10",
-    "sweetalert": "^2.1.2",
-    "auth0-js": "^9.20.2"
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
