--- a/api/src/package.json
+++ b/api/src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "build": "node ./index.js",
+    "build": "npm install",
     "dev": "nodemon ./index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
