--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "npm install",
     "start": "node ./index.js",
     "dev": "nodemon ./index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
